New build with decompression fallback

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/SnowboarderBuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/SnowboarderBuild.data.gz",
-        frameworkUrl: buildUrl + "/SnowboarderBuild.framework.js.gz",
-        codeUrl: buildUrl + "/SnowboarderBuild.wasm.gz",
+        dataUrl: buildUrl + "/SnowboarderBuild.data.unityweb",
+        frameworkUrl: buildUrl + "/SnowboarderBuild.framework.js.unityweb",
+        codeUrl: buildUrl + "/SnowboarderBuild.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "SnowBoarder",
