Build with no compression

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/SnowboarderBuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/SnowboarderBuild.data.unityweb",
-        frameworkUrl: buildUrl + "/SnowboarderBuild.framework.js.unityweb",
-        codeUrl: buildUrl + "/SnowboarderBuild.wasm.unityweb",
+        dataUrl: buildUrl + "/SnowboarderBuild.data",
+        frameworkUrl: buildUrl + "/SnowboarderBuild.framework.js",
+        codeUrl: buildUrl + "/SnowboarderBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "SnowBoarder",
