New build with better turning

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/SnowboarderBuild.loader.js";
+      var loaderUrl = buildUrl + "/Temp.loader.js";
       var config = {
-        dataUrl: buildUrl + "/SnowboarderBuild.data",
-        frameworkUrl: buildUrl + "/SnowboarderBuild.framework.js",
-        codeUrl: buildUrl + "/SnowboarderBuild.wasm",
+        dataUrl: buildUrl + "/Temp.data",
+        frameworkUrl: buildUrl + "/Temp.framework.js",
+        codeUrl: buildUrl + "/Temp.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "SnowBoarder",
